--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,31 @@
-venv/
-
+# Python
 __pycache__/
 */__pycache__/
 **/__pycache__/
-
-
-*.pyc
+*.py[cod]
 *.pyo
 *.pyd
+*.pyc
+*.pkl
+*.sqlite3
+*.db
 
+# Virtual environment
+.venv/
+.env
 
+# Jupyter notebooks checkpoints
+.ipynb_checkpoints/
+
+# Logs
+*.log
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# AI / model caches (SentenceTransformers, Torch, HuggingFace)
+*.pt
+*.bin
+*.cache/
+model_cache/
