chore: relocate .env.example to project root for easier onboarding

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,70 @@
-API_KEY=your_api_key_here
-DB_URL=your_db_url_here
+# ==========================================
+# API Keys Configuration
+# ==========================================
+
+# Groq API Key (Main AI feedback, fast responses)
+# Recommended model: llama-3.3-70b-versatile for code
+# Get yours at: https://console.groq.com/keys
+GROQ_API_KEY=your_groq_api_key_here
+
+# Google Gemini API Key (Embeddings for similarity/plagiarism)
+# Usually used for code embedding & retrieval tasks
+# Get yours at: https://aistudio.google.com/app/apikey
+GOOGLE_API_KEY=your_google_api_key_here
+
+# ==========================================
+# Model Configuration (Optional)
+# ==========================================
+
+# Groq Models (choose one):
+# - llama-3.3-70b-versatile (best quality for code, default)
+# - llama-3.1-8b-instant (faster, uses less quota)
+# - mixtral-8x7b-32768 (good for long code files)
+GROQ_MODEL=llama-3.3-70b-versatile
+
+# Gemini Embedding Model (usually no need to change)
+GEMINI_EMBEDDING_MODEL=models/text-embedding-004
+
+# ==========================================
+# AI Response Settings (Optional)
+# ==========================================
+
+# Plagiarism detection threshold (0.0 to 1.0)
+# 0.85 = 85% similarity triggers a warning
+PLAGIARISM_THRESHOLD=0.85
+
+# Maximum tokens returned from AI responses
+MAX_TOKENS=1000
+
+# AI creativity (0.0 = focused/precise, 1.0 = creative)
+AI_TEMPERATURE=0.7
+
+# ==========================================
+# Database Configuration (Optional)
+# ==========================================
+
+# Database URL if using external DB (PostgreSQL, MySQL, SQLite)
+# Example SQLite: sqlite:///db/accl.db
+# Example PostgreSQL: postgresql://user:password@localhost:5432/accl
+DB_URL=your_database_url_here
+
+# ==========================================
+# Code Execution Sandbox (Optional)
+# ==========================================
+
+# Directory where temporary student code files will be executed
+# e.g., Docker sandbox or filesystem path
+SANDBOX_PATH=/path/to/sandbox
+
+# Maximum execution time per code run (seconds)
+SANDBOX_TIMEOUT=5
+
+# ==========================================
+# Instructions
+# ==========================================
+
+# 1. Copy this file and rename to '.env' (without .example)
+# 2. Replace all 'your_*_here' values with your actual credentials
+# 3. Never commit the .env file to version control
+# 4. Add '.env' to your .gitignore
+# 5. Optional settings can be left as defaults or tuned per project needs
