config: configure pytest with comprehensive test options and coverage reporting
- Add test discovery patterns and paths
- Configure output options with coverage reporting
- Define test markers for categorization (unit, integration, db, security, etc.)
- Set timeout limits and warning filters
- Configure coverage thresholds at 80%

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,66 @@
 [pytest]
-minversion = 7.0
-addopts = -ra -q
-testpaths = tests
+# Test discovery patterns
 python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+
+# Test paths
+testpaths = tests
+
+# Output options
+addopts = 
+    -v
+    --strict-markers
+    --tb=short
+    --disable-warnings
+    --color=yes
+    --cov=src
+    --cov-report=html
+    --cov-report=term-missing
+
+# Markers for categorizing tests
+markers =
+    unit: Unit tests for individual components (fast, isolated)
+    integration: Integration tests for multiple components
+    db: Tests that require database access
+    model: Model layer tests
+    repo: Repository layer tests
+    security: Security-related tests (SQL injection, etc.)
+    performance: Performance and load tests
+    slow: Tests that take a long time to run
+    regression: Regression tests for previously fixed bugs
+    smoke: Quick smoke tests for basic functionality
+    requires_api: Tests that need external API keys
+
+# Test execution options
+console_output_style = progress
+log_cli = false
+log_cli_level = INFO
+
+# Timeout for tests (in seconds)
+timeout = 300
+timeout_method = thread
+
+# Warnings
+filterwarnings =
+    error
+    ignore::UserWarning
+    ignore::DeprecationWarning
+
+[coverage:run]
+source = src
+omit = 
+    */tests/*
+    */__pycache__/*
+    */venv/*
+    */.venv/*
+    */migrations/*
+
+[coverage:report]
+precision = 2
+show_missing = True
+skip_covered = False
+fail_under = 80
+
+[coverage:html]
+directory = htmlcov
