chore: update configuration for new structure
- Create src/config/settings.py with centralized config
- Update run.py paths to web/ and data/
- Update .env.example database path to data/
- Update .gitignore to ignore data/*.db

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@
 # SQLite database path (relative to project root)
 # Default: src/DB/Accl_DB.db
 # Note: SQLAlchemy requires 'sqlite:///' prefix for relative paths
-ACCL_DB_PATH=sqlite:///src/DB/Accl_DB.db
+ACCL_DB_PATH=sqlite:///data/Accl_DB.db
 
 # Alternative formats:
 # Absolute path: sqlite:////absolute/path/to/src/DB/Accl_DB.db
