--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,8 @@ model_cache/
 # Ignore pip editable/build info
 *.egg-info/
 
-# Ignore SQLite database
-src/DB/Accl_DB.db
+# Ignore SQLite database in data directory
+data/*.db
 
 .pytest_cache/
 
