--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,11 @@ htmlcov/
 
 *.backup
 *.bak
+
+# Temporary files and reports
+sandbox/
+detailed_coverage.txt
+repo_coverage.txt
+repo_coverage_all.txt
+summary_report.txt
+test_results.txt
