--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
       env:
         SECRET_KEY: ci-testing-secret-key
       run: |
-        pytest tests/ -v --tb=short --cov=src --cov-report=xml --cov-report=term
+        pytest tests/ -v --tb=short --import-mode=importlib --cov=src --cov-report=xml --cov-report=term
 
     - name: Upload coverage report
       uses: codecov/codecov-action@v4
