Configure pytest to use importlib mode to resolve local import mismatch errors

--- a/pytest.ini
+++ b/pytest.ini
@@ -14,6 +14,7 @@ addopts =
     --tb=short
     --disable-warnings
     --color=yes
+    --import-mode=importlib
     --cov=src
     --cov-report=html
     --cov-report=term-missing
